<resources>
    <string name="app_name">login_ascencio_jonathan</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_recuerdas_la_contrase_a">¿No recuerdas la contraseña?</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_recuerda_la_contrase_a">¿No recuerda la contraseña?</string>
    <string name="Iniciar_Sesi_n">Iniciar Sesión</string>
    <string name="Nombre_de_Usuario">Nombre de Usuario</string>
    <string name="Inicio_de_Sesi_n">Inicio de Sesión</string>
</resources>